# awesome_video_kit

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  consumer-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
android/src/main/jniLibs/armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
android/src/main/kotlin/com/goshlive/awesome_video_kit/: AudioExtractManager.kt  AwesomeManagedFileManager.kt  AwesomeVideoKitManagerJni.kt  AwesomeVideoKitPlugin.kt  FfmpegErrorFormatter.kt  VideoDownloadManager.kt  VideoFrameCaptureManager.kt  VideoTranscodeManager.kt
android/src/main/kotlin/com/goshlive/awesomevideokit/internal/: NativeBridge.kt
android/src/test/kotlin/com/goshlive/awesome_video_kit/: AwesomeManagedFileManagerTest.kt  AwesomeVideoKitPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/awesome_video_kit_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: awesome_video_kit.podspec
ios/Classes/: AwesomeVideoKitPlugin.swift
ios/Framework/AwesomeVideoKitSDK.xcframework/: Info.plist
ios/Framework/AwesomeVideoKitSDK.xcframework/ios-arm64-simulator/AwesomeVideoKitSDK.framework/: Info.plist
ios/Framework/AwesomeVideoKitSDK.xcframework/ios-arm64-simulator/AwesomeVideoKitSDK.framework/Headers/: AwesomeVideoFileManager.h  AwesomeVideoKitManager.h
ios/Framework/AwesomeVideoKitSDK.xcframework/ios-arm64/AwesomeVideoKitSDK.framework/: Info.plist
ios/Framework/AwesomeVideoKitSDK.xcframework/ios-arm64/AwesomeVideoKitSDK.framework/Headers/: AwesomeAVFileInfo.h  AwesomeVideoKitSDK.h  AwesomeVideoTranscoderManager.h
ios/Framework/AwesomeVideoKitSDK.xcframework/ios-arm64/AwesomeVideoKitSDK.framework/Modules/: module.modulemap
lib/: awesome_video_kit.dart  awesome_video_kit_method_channel.dart  awesome_video_kit_platform_interface.dart
lib/src/: media_info_models.dart  video_task_models.dart
native/AndroidAwesomeVideoKit/: .gitignore  CMakeLists.txt  build.sh
native/AndroidAwesomeVideoKit/src/: awesome_video_kit_manager_jni.c
native/DependencyLibraries/: .gitignore
native/DependencyLibraries/scripts/: README.md  android_build_common.sh  build_android_all.sh  build_android_ffmpeg.sh  build_android_mbedtls.sh  build_android_x264.sh  build_ios_all.sh  build_ios_ffmpeg.sh  build_ios_mbedtls.sh  build_ios_x264.sh  fetch_dependency_sources.sh  ios_build_common.sh
native/iOSAwesomeVideoKit/: .gitignore  build.sh
native/iOSAwesomeVideoKit/AwesomeVideoKitSDK/: AwesomeAVFileInfo.mm  AwesomeVideoDownloadManager.h  AwesomeVideoDownloadManager.m  AwesomeVideoFileManager.m  AwesomeVideoFrameCaptureManager.h  AwesomeVideoFrameCaptureManager.mm  AwesomeVideoKitManager.m  AwesomeVideoTranscoderManager.m
native/iOSAwesomeVideoKit/AwesomeVideoKitSDK/AwesomeVideoKitSDK.docc/: AwesomeVideoKitSDK.md
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/: project.pbxproj
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/project.xcworkspace/xcuserdata/cuizhiwei.xcuserdatad/: UserInterfaceState.xcuserstate
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/project.xcworkspace/xcuserdata/dev.xcuserdatad/: UserInterfaceState.xcuserstate
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/xcuserdata/cuizhiwei.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/xcuserdata/cuizhiwei.xcuserdatad/xcschemes/: xcschememanagement.plist
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/xcuserdata/dev.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit.xcodeproj/xcuserdata/dev.xcuserdatad/xcschemes/: xcschememanagement.plist
native/iOSAwesomeVideoKit/iOSAwesomeVideoKit/Base.lproj/: Main.storyboard
native/shared/ffmpeg_tools/: ffmpeg_av_file_info.cpp  ffmpeg_av_file_info.h  ffmpeg_av_file_info_c_api.cpp  ffmpeg_av_file_info_c_api.h  ffmpeg_common_utils.cpp  ffmpeg_common_utils.h  ffmpeg_hls.cpp  ffmpeg_hls.h  ffmpeg_hls_common.h  ffmpeg_hls_downloader.cpp  ffmpeg_hls_downloader.h  ffmpeg_hls_network.cpp  ffmpeg_hls_network.h  ffmpeg_hls_progress.h  ffmpeg_hls_watermark_pipeline.cpp  ffmpeg_hls_watermark_pipeline.h  ffmpeg_mp4.cpp  ffmpeg_mp4.h  ffmpeg_mp4_concat_image.cpp  ffmpeg_mp4_concat_image.h  ffmpeg_mp4_concat_image_support.cpp  ffmpeg_mp4_concat_image_support.h  ffmpeg_mp4_concat_image_transcoder.cpp  ffmpeg_mp4_concat_image_transcoder.h  ffmpeg_mp4_transcoder.cpp  ffmpeg_mp4_transcoder.h  ffmpeg_mp4_transcoder_base.cpp  ffmpeg_mp4_transcoder_base.h  ffmpeg_mp4_watermark.cpp  ffmpeg_mp4_watermark.h  ffmpeg_mp4_watermark_transcoder.cpp  ffmpeg_mp4_watermark_transcoder.h  ffmpeg_video_frame_extractor.cpp  ffmpeg_video_frame_extractor.h  ffmpeg_watermark_filter_utils.cpp  ffmpeg_watermark_filter_utils.h
